--- a/MAD/app.json
+++ b/MAD/app.json
@@ -25,6 +25,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-image-picker", {"photoPermission": "The app accesses your photos to let you share them with your friends."}]
   }
 }
