--- a/MAD/app.json
+++ b/MAD/app.json
@@ -26,6 +26,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-image-picker", {"photoPermission": "The app accesses your photos to let you share them with your friends."}]
+    "plugins": 
+      ["expo-image-picker", 
+        {"photoPermission": "The app accesses your photos to let you share them with your friends."}
+      ]
   }
 }
