Suc6fully added image select

--- a/MAD/app.json
+++ b/MAD/app.json
@@ -26,9 +26,10 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": 
+    "plugins": [
       ["expo-image-picker", 
         {"photoPermission": "The app accesses your photos to let you share them with your friends."}
       ]
+    ]
   }
 }
