--- a/MAD/app.json
+++ b/MAD/app.json
@@ -27,8 +27,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      ["expo-image-picker", 
-        {"photoPermission": "The app accesses your photos to let you share them with your friends."}
+      [
+        "expo-image-picker", 
+        {"photoPermission": "The app accesses your photos to let you share them with your coworkers."},
+
+        "expo-location",
+        { "locationAlwaysAndWhenInUsePermission": "Allow location request" },
+        { "isAndroidBackgroundLocationEnabled": false }
       ]
     ]
   }
