--- a/MAD/package.json
+++ b/MAD/package.json
@@ -15,7 +15,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-image-picker": "^7.1.0",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "expo-mail-composer": "~12.3.0",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
