--- a/MAD/app.json
+++ b/MAD/app.json
@@ -29,11 +29,7 @@
     "plugins": [
       [
         "expo-image-picker", 
-        {"photoPermission": "The app accesses your photos to let you share them with your coworkers."},
-
-        "expo-location",
-        { "locationAlwaysAndWhenInUsePermission": "Allow location request" },
-        { "isAndroidBackgroundLocationEnabled": false }
+        {"photoPermission": "The app accesses your photos to let you share them with your coworkers."}
       ]
     ]
   }
