--- a/MAD/app.json
+++ b/MAD/app.json
@@ -27,9 +27,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      [
-        "expo-image-picker", 
-        {"photoPermission": "The app accesses your photos to let you share them with your coworkers."}
+      ["expo-image-picker", 
+        {"photoPermission": "The app accesses your photos to let you share them with your friends."}
       ]
     ]
   }
