--- a/MAD/package.json
+++ b/MAD/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "2.4.10",
-    "expo": "^49.0.21",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
+    "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-image-picker": "^7.1.0"
+    "react-native-image-picker": "^7.1.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
